more modification in name

--- a/NCexamples/qtransport/transmission/Makefile
+++ b/NCexamples/qtransport/transmission/Makefile
@@ -1,6 +1,10 @@
 cp:
 	cp *py Makefile readme.txt scripts/
 
+cp2nc:
+	cp scripts/* $${NCHOME}/NCexamples/qtransport/transmission/scripts
+
+
 clean3:
 	rm -r   3.scatter+tbtrans/0*
 
