--- a/NCexamples/qtnegf/input.yaml
+++ b/NCexamples/qtnegf/input.yaml
@@ -1,6 +1,6 @@
 Voltage: 0.2 eV
-elecL : 1elec/Au_left/Run
-elecR : 1elec/Au_rigt/Run
+elecL : elec/Au_left/Run
+elecR : elec/Au_rigt/Run
 n_left : 36
 n_right: 36
 ts_eta:
