qtnegf: parameter updating

--- a/NCexamples/qtnegf/Makefile
+++ b/NCexamples/qtnegf/Makefile
@@ -1,2 +1,5 @@
+cp:
+	cp Makefile readme.txt run_qtnegf.py input.yaml /home/joonho/pymod/nanocore/NCexamples/qtnegf
+
 clean:
 	rm -r *elec* *chann* *post* *fdf *tcl
