qtnegf: show params

--- a/NCexamples/qtnegf/Makefile
+++ b/NCexamples/qtnegf/Makefile
@@ -1,5 +1,5 @@
 cp:
-	cp Makefile readme.txt run_qtnegf.py input.yaml /home/joonho/pymod/nanocore/NCexamples/qtnegf
+	cp -r Models Makefile readme.txt run_qtnegf.py input.yaml *fdf /home/joonho/pymod/nanocore/NCexamples/qtnegf
 
 clean:
 	rm -r *elec* *chann* *post* *fdf *tcl
