modify to get input structures

--- a/OORIexamples/qtnegf/Makefile
+++ b/OORIexamples/qtnegf/Makefile
@@ -2,4 +2,4 @@ cp:
 	cp -r Makefile readme.txt run_qtnegf.py input.yaml slm_qtnegf.sh /home/joonho/pymod/oorinano/OORIexamples/qtnegf
 
 clean:
-	rm -r *elec* *chann* *post* *fdf *tcl *.o *.e *.out
+	rm -r *elec* *chann* *post* *fdf *tcl *.o *.e *.out *.log
