catalysis & dos analysis in slurm

--- a/Examples/catalysis/Makefile
+++ b/Examples/catalysis/Makefile
@@ -1,2 +1,2 @@
 cp:
-	cp run_catalysis.py slm*sh readme_cat.txt Makefile pbs_vasp_kisti_skl.sh /home/joonho/pymod/oorinano/Examples/catalysis
+	cp run_catalysis.py run_vaspdos.py vas_dos_analysis.py *sh readme_cat.txt Makefile /home/joonho/pymod/oorinano/Examples/catalysis
